# safe-arithmetic

./: .typos.toml  Cargo.toml  README.md  taskfile.yaml
.github/workflows/: release.yaml  test.yaml
src/: cast.rs  clamp.rs  error.rs  lib.rs
src/ops/: checked_add.rs  checked_div.rs  checked_mul.rs  checked_sub.rs
