[package]
name = "safe-arithmetic"
version = "0.1.0"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "traits for safe arithmetic operations in rust"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/safe-arithmetic"
repository = "https://github.com/romnn/safe-arithmetic"
categories = [
  "mathematics"
]
keywords = [
  "arithmetics",
  "overflow",
  "underflow",
  "casting",
]
exclude = [
  "tests/"
]

[features]
default = []

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[dependencies]
num = "0"

[dev-dependencies]
similar-asserts = "1"
approx = "0"
