[package]
name = "safe-arithmetic"
version = "0.0.2"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
publish = true
description = "Traits for safe arithmetic operations in rust"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/safe-arithmetic"
homepage = "https://github.com/romnn/safe-arithmetic"
repository = "https://github.com/romnn/safe-arithmetic"
categories = [
  "mathematics"
]
keywords = [
  "arithmetics",
  "overflow",
  "underflow",
  "casting",
]
exclude = [
  ".github",
  ".typos.toml",
  ".ignore",
  ".bumpversion.toml",
  "tests/",
  "taskfile.yaml",
]

[features]
default = []

[package.metadata.cargo-feature-combinations]
exclude_features = ["default"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
num = "0"

[dev-dependencies]
similar-asserts = "1"
approx = "0"
